nginx/base/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx
  labels:
    name: ngnix
